validations & express validator

--- a/src/views/carrousels.ejs
+++ b/src/views/carrousels.ejs
@@ -83,60 +83,88 @@
     <div class="carouselTwo">
 
         <div class="trendingTwo">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/iphone/iphone14ProMx.jpg" />
-                    <h3><a href="/">Iphone 14 Pro max</a></h3>
+            <p class="linkRoute"> <a href="/"> Computadores >  </a> </p>
+                <img src="/images/computers/apple/mackBookAir.jpg" />
+                    <h3><a href="/">Mack Book Air</a></h3>
                         <p>Precio: $6.149.000</p>
                             </div>
 
         <div class="trendingTwo">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/samsung/galaxyS23U.jpg" />
-                    <h3><a href="/">Samsung Galaxy S23 Ultra</a></h3>
+            <p class="linkRoute"> <a href="/"> Computadores >  </a> </p>
+                <img src="/images/computers/hp/pavilionG4.jpg" />
+                    <h3><a href="/">Laptop Hp Pavilion G4 </a></h3>
                         <p>Precio: $5.650.000</p>
                             </div>
 
         <div class="trendingTwo">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/xioami/Redmi/note12ProP.jpeg" />
-                    <h3><a href="/">Xiaomi Redmi Note 12 Pro+</a></h3>
+            <p class="linkRoute"> <a href="/"> Tablets >  </a> </p>
+                <img src="/images/computers/lenovo/yoga13.jpeg" />
+                    <h3><a href="/">Ipad Lenovo Yoga 13 </a></h3>
                         <p>Precio: $1.700.000</p>
                             </div>
 
-        <div class="trendingTwo">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/realme/realme9Pro.jpg" />
-                    <h3><a href="/">Realme 9 Pro </a></h3>
-                        <p>Precio: $1.050.000</p>
-                            </div>
-
 
         <div class="trendingTwo">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/samsung/galaxyZF4.jpeg" />
-                    <h3><a href="/">Samsung Galaxy Z Flip 4 </a></h3>
+            <p class="linkRoute"> <a href="/"> Monitores >  </a> </p>
+                <img src="/images/computers/samsung/monitor32.jpg" />
+                    <h3><a href="/"> Monitor Samsung Galaxy curve 32" </a></h3>
                         <p>Precio: $3.500.00</p>
                             </div>
 
         <div class="trendingTwo">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/iphone/iphone13ProMx.jpg" />
-                    <h3><a href="/">Iphone 13 Pro max </a></h3>
+            <p class="linkRoute"> <a href="/"> Tablets >  </a> </p>
+                <img src="/images/computers/apple/ipadAir5.jpg" />
+                    <h3><a href="/">Ipad Air Series 5</a></h3>
                         <p>Precio: $5.250.000</p>
                             </div> 
                         
         <div class="trendingTwo">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/xioami/Redmi/redmi-N11-ProPlus.jpg" />
-                    <h3><a href="/"> Xioami Redmi Note 11 Pro+ </a></h3>
+            <p class="linkRoute"> <a href="/"> Computadores >  </a> </p>
+                <img src="/images/computers/hp/240G7.jpg" />
+                    <h3><a href="/"> Laptop Hp G7 series 240 </a></h3>
                         <p>Precio: $1.450.000</p>
+                            </div>
+
+        <div class="trendingTwo">
+            <p class="linkRoute"> <a href="/"> Computadores >  </a> </p>
+                <img src="/images/computers/apple/SmartbookA.jpg" />
+                    <h3><a href="/"> Computadora Apple Smartbook A</a></h3>
+                        <p>Precio: $6.149.000</p>
                             </div>
                         
         <div class="trendingTwo">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/samsung/galaxyZFl4.jpg" />
-                    <h3><a href="/">Samsung Galaxy Z Fold 4 </a></h3>
+            <p class="linkRoute"> <a href="/"> Computadores >  </a> </p>
+                <img src="/images/computers/lenovo/ideaPad330.jpg" />
+                    <h3><a href="/">Laptop Lenovo IdeaPad 330 </a></h3>
                         <p>Precio: $6.649.00</p>
+                            </div>
+
+        <div class="trendingTwo">
+            <p class="linkRoute"> <a href="/"> Computadores >  </a> </p>
+                <img src="/images/computers/samsung/galaxyBook.jpg" />
+                    <h3><a href="/"> Laptop Samsung Galaxy Book </a></h3>
+                        <p>Precio: $3.500.00</p>
+                            </div>
+
+        <div class="trendingTwo">
+            <p class="linkRoute"> <a href="/"> Tablets >  </a> </p>
+                <img src="/images/computers/apple/smartPadA.jpg" />
+                    <h3><a href="/"> Apple Smart Pad series A</a></h3>
+                        <p>Precio: $6.149.000</p>
+                            </div>
+
+        <div class="trendingTwo">
+            <p class="linkRoute"> <a href="/"> Tablets >  </a> </p>
+                <img src="/images/computers/lenovo/tabP12Pro.jpg" />
+                    <h3><a href="/"> Tablet Lenovo P12 Pro </a></h3>
+                        <p>Precio: $6.649.00</p>
+                            </div>
+
+        <div class="trendingTwo">
+            <p class="linkRoute"> <a href="/"> Tablets >  </a> </p>
+                <img src="/images/computers/apple/ipadMini6.jpg" />
+                    <h3><a href="/"> Apple Ipad Mini 6</a></h3>
+                        <p>Precio: $6.149.000</p>
                             </div>
 
     </div>
@@ -156,60 +184,130 @@
     <div class="carouselThree">
 
         <div class="trendingThree">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/iphone/iphone14ProMx.jpg" />
-                    <h3><a href="/">Iphone 14 Pro max</a></h3>
-                        <p>Precio: $6.149.000</p>
+            <p class="linkRoute"> <a href="/"> Cables >  </a> </p>
+                <img src="/images/accesories/cargadores/cargadorIphone.jpg" />
+                    <h3><a href="/"> Cargador Completo Iphone usb</a></h3>
+                        <p>Precio: $80.000 </p>
                             </div>
 
         <div class="trendingThree">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/samsung/galaxyS23U.jpg" />
-                    <h3><a href="/">Samsung Galaxy S23 Ultra</a></h3>
-                        <p>Precio: $5.650.000</p>
+            <p class="linkRoute"> <a href="/"> Cables >  </a> </p>
+                <img src="/images/accesories/cargadores/cargadorFastSamsg.jpg" />
+                    <h3><a href="/">Cargador Rapido Completo Samsung</a></h3>
+                        <p>Precio: $100.000 </p>
                             </div>
 
         <div class="trendingThree">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/xioami/Redmi/note12ProP.jpeg" />
-                    <h3><a href="/">Xiaomi Redmi Note 12 Pro+</a></h3>
-                        <p>Precio: $1.700.000</p>
+            <p class="linkRoute"> <a href="/"> Cables >  </a> </p>
+                <img src="/images/accesories/cargadores/cargadorMgsafe.jpg" />
+                    <h3><a href="/">Cargador MagSafe</a></h3>
+                        <p>Precio: $120.000 </p>
                             </div>
 
         <div class="trendingThree">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/realme/realme9Pro.jpg" />
-                    <h3><a href="/">Realme 9 Pro </a></h3>
-                        <p>Precio: $1.050.000</p>
+            <p class="linkRoute"> <a href="/"> Cables >  </a> </p>
+                <img src="/images/accesories/cargadores/marranito.jpg" />
+                    <h3><a href="/"> Cabezote Iphone Carga Rapida (20W) </a></h3>
+                        <p>Precio: $80.000 </p>
                             </div>
 
 
         <div class="trendingThree">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/samsung/galaxyZF4.jpeg" />
-                    <h3><a href="/">Samsung Galaxy Z Flip 4 </a></h3>
-                        <p>Precio: $3.500.00</p>
+            <p class="linkRoute"> <a href="/"> Cables >  </a> </p>
+                <img src="/images/accesories/cargadores/cableUsb.jpg" />
+                    <h3><a href="/"> Cable Iphone USB 2M </a></h3>
+                        <p>Precio: $90.000 </p>
                             </div>
 
         <div class="trendingThree">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/iphone/iphone13ProMx.jpg" />
-                    <h3><a href="/">Iphone 13 Pro max </a></h3>
-                        <p>Precio: $5.250.000</p>
+            <p class="linkRoute"> <a href="/"> Cables >  </a> </p>
+                <img src="/images/accesories/cargadores/cargadorTipoC.jpg" />
+                    <h3><a href="/">Cargador Tipo C Android Generico </a></h3>
+                        <p>Precio: $20.000 </p>
                             </div> 
                         
         <div class="trendingThree">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/xioami/Redmi/redmi-N11-ProPlus.jpg" />
-                    <h3><a href="/"> Xioami Redmi Note 11 Pro+ </a></h3>
-                        <p>Precio: $1.450.000</p>
+            <p class="linkRoute"> <a href="/"> Gadgets >  </a> </p>
+                <img src="/images/accesories/gadgets/airpodsPro.jpg" />
+                    <h3><a href="/"> Apple AirPods Pro </a></h3>
+                        <p>Precio: $1.050.000 </p>
                             </div>
                         
         <div class="trendingThree">
-            <p class="linkRoute"> <a href="/"> Celulares >  </a> </p>
-                <img src="/images/phones/samsung/galaxyZFl4.jpg" />
-                    <h3><a href="/">Samsung Galaxy Z Fold 4 </a></h3>
-                        <p>Precio: $6.649.00</p>
+            <p class="linkRoute"> <a href="/"> Gadgets >  </a> </p>
+                <img src="/images/accesories/gadgets/galaxyBuds2.jpeg" />
+                    <h3><a href="/">Samsung Galaxy Bud 2 </a></h3>
+                        <p>Precio: $800.000 </p>
+                            </div>
+
+                            <div class="trendingThree">
+        <p class="linkRoute"> <a href="/"> Gadgets >  </a> </p>
+                <img src="/images/phones/accesories/gadgets/redmiAirdots.jpg" />
+                    <h3><a href="/"> Xioami Redmi AirDots 3 </a></h3>
+                        <p>Precio: $200.000 </p>
+                            </div>
+                        
+        <div class="trendingThree">
+            <p class="linkRoute"> <a href="/"> Gadgets >  </a> </p>
+                <img src="/images/accesories/gadgets/i12.jpg" />
+                    <h3><a href="/"> Audifonos i12 </a></h3>
+                        <p>Precio: $45.000 </p>
+                            </div>
+
+        <div class="trendingThree">
+            <p class="linkRoute"> <a href="/"> Gadgets >  </a> </p>
+                <img src="/images/accesories/gadgets/watch8.jpg" />
+                    <h3><a href="/"> Apple Watch Serie 8 </a></h3>
+                        <p>Precio: $2.100.000 </p>
+                            </div>
+                        
+        <div class="trendingThree">
+            <p class="linkRoute"> <a href="/"> Gadgets >  </a> </p>
+                <img src="/images/accesories/gadgets/airpods3.png" />
+                    <h3><a href="/"> Apple AirPods Serie 3 </a></h3>
+                        <p>Precio: $950.000 </p>
+                            </div>
+
+        <div class="trendingThree">
+            <p class="linkRoute"> <a href="/"> Gadgets >  </a> </p>
+                <img src="/images/accesories/gadgets/watchUltra.jpg" />
+                    <h3><a href="/"> Apple Watch Ultra </a></h3>
+                        <p>Precio: $4.250.000</p>
+                            </div>
+                        
+        <div class="trendingThree">
+            <p class="linkRoute"> <a href="/"> Adaptadores >  </a> </p>
+                <img src="/images/accesories/gadgets/powerBankAOrigin.jpg" />
+                    <h3><a href="/"> Power Bank Apple Original</a></h3>
+                        <p>Precio: $330.000 </p>
+                            </div>
+
+        <div class="trendingThree">
+            <p class="linkRoute"> <a href="/"> Accesorios >  </a> </p>
+                <img src="/images/accesories/accesorios/manillaWatch.png" />
+                    <h3><a href="/"> Manill Apple Watch </a></h3>
+                        <p>Precio: $65.000 </p>
+                            </div>
+                        
+        <div class="trendingThree">
+            <p class="linkRoute"> <a href="/"> Accesorios >  </a> </p>
+                <img src="/images/accesories/accesorios/popSocket.jpg" />
+                    <h3><a href="/"> Pop Socket </a></h3>
+                        <p>Precio: $20.000 </p>
+                            </div>
+
+        <div class="trendingThree">
+            <p class="linkRoute"> <a href="/"> Accesorios >  </a> </p>
+                <img src="/images/accesories/accesorios/protectorAirpods.png" />
+                    <h3><a href="/"> Protector Para Airpods </a></h3>
+                        <p>Precio: $50.000</p>
+                            </div>
+                        
+        <div class="trendingThree">
+            <p class="linkRoute"> <a href="/"> Accesorios >  </a> </p>
+                <img src="/images/accesories/accesorios/soporteCarro.png" />
+                    <h3><a href="/"> Soporte Celulares para Carro </a></h3>
+                        <p>Precio: $30.000 </p>
                             </div>
 
     </div>
