--- a/src/public/css/loginRegister.css
+++ b/src/public/css/loginRegister.css
@@ -114,15 +114,15 @@ input::placeholder {
   }
   
   /**
-   * * Login and signup forms
+   * * Login and signup boxes form
    * */
 
 .user_options-forms {
     position: absolute;
     top: 50%;
     left: 30px;
-    width: calc(50% - 30px);
-    min-height: 420px;
+    width: calc(55% - 30px);
+    min-height: 470px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 2px 0 15px rgba(0, 0, 0, 0.25);
@@ -246,6 +246,21 @@ input::placeholder {
     -webkit-animation: bounceRight 1s forwards;
             animation: bounceRight 1s forwards;
   }
+
+.is-valid{
+    color: #198754;
+  }
+  
+.is-invalid{
+    color: #842029;
+  }
+  
+.alert-warning{
+    color:#842029;
+    background-color: #F8D7DA;
+    text-align: center;
+    border-radius: 10px;
+  }
   
 
   @-webkit-keyframes bounceLeft {
@@ -338,3 +353,4 @@ input::placeholder {
       padding: 40px 45px;
     }
   }
+
