--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="es">
+    
 <%- include('partials/head') %>
 
 <body>
@@ -46,4 +49,6 @@
     <%- include('partials/footer') %>
 
 </body>
+
+</html>
 
