--- a/src/public/css/loginRegister.css
+++ b/src/public/css/loginRegister.css
@@ -155,7 +155,7 @@ input::placeholder {
     font-family: "Montserrat", sans-serif;
     font-size: 1rem;
     font-weight: 300;
-    color: gray;
+    /* color: gray; */
     letter-spacing: 0.1rem;
     transition: border-color 0.2s ease-in-out;
   }
@@ -248,18 +248,18 @@ input::placeholder {
   }
 
 .is-valid{
-    color: #198754;
+    color: #198754 
   }
   
 .is-invalid{
     color: #842029;
   }
   
-.alert-warning{
-    color:#842029;
-    background-color: #F8D7DA;
-    text-align: center;
-    border-radius: 10px;
+.error-message{
+  color:#842029;
+  background-color: #F8D7DA;
+  text-align: center;
+  border-radius: 10px;
   }
   
 
