--- a/src/views/users/loginRegister.ejs
+++ b/src/views/users/loginRegister.ejs
@@ -64,28 +64,35 @@
                 <% if (locals.errors && locals.errors.firstName) { %>
                   <div id="firstNameError" class="error-message"><%= locals.errors.firstName.msg %></div>
                 <% } %>
+                <div id="firstNameError" class="error-message"></div>
               </div>
               <div class="forms_field">
                 <input type="text" name="lastName" placeholder="Apellidos" class="forms_field-input" value="<%= locals.oldData && locals.oldData.lastName%>" />
                 <% if (locals.errors && locals.errors.lastName) { %>
                   <div id="lastNameError" class="error-message"><%= locals.errors.lastName.msg %></div>
                 <% } %>
+                <div id="lastNameError" class="error-message"></div>
+
               </div>
               <div class="forms_field">
                 <input type="email" name="email" placeholder="Correo Electrónico" class="forms_field-input" value="<%= locals.oldData && locals.oldData.email%>" />
                 <% if (locals.errors && locals.errors.email) { %>
                   <div id="emailError" class="error-message"><%= locals.errors.email.msg %></div>
                 <% } %>
+                <div id="emailError" class="error-message"></div>
+
               </div>
               <div class="forms_field">
                 <input type="password" name="password" placeholder="Contraseña" class="forms_field-input" value="<%= locals.oldData && locals.oldData.password%>" />
                 <% if (locals.errors && locals.errors.password) { %>
                   <div id="passwordError" class="error-message"><%= locals.errors.password.msg %></div>
                 <% } %>
+                <div id="passwordError" class="error-message"></div>
+
               </div>
             </fieldset>
             <div class="forms_buttons">
-              <input type="submit" name="submit" value="Registrarme" class="forms_buttons-action">
+              <button type="submit" class="forms_buttons-action"> registrame </button>
             </div>
           </form>
         </div>
